static/css/forms.css
#form {
	 border-radius: 18px; 
	-moz-border-radius: 18px; 
	-webkit-border-radius: 18px; 
	border: 0px inset #1D805F;
	background-color: #fff;
	width: 300px;
	max-width: 350px;
	height: 400px;
	max-height: 500px;
	margin: 5px;
}

#field {
	 border-radius: 18px; 
	-moz-border-radius: 18px; 
	-webkit-border-radius: 18px; 
	border: 0px inset #1D805F;
	background-color: #fff;
	padding: 5px;
	margin: 5px;
}

#field_50 {
	 border-radius: 18px; 
	-moz-border-radius: 18px; 
	-webkit-border-radius: 18px; 
	border: 0px inset #1D805F;
	background-color: #fff;
	padding: 5px;
	margin: 5px;
	width:50%;
	max-width: 50%;
}


#bigField {
	 border-radius: 18px; 
	-moz-border-radius: 18px; 
	-webkit-border-radius: 18px; 
	border: 0px inset #1D805F;
	background-color: #fff;
	padding: 6px;
	margin-top: 10px;
	margin-bottom: 5px;	
	margin-left: 20px;
	margin-right: 20px;
	overflow: auto;
}

#toCenter {
	text-align: center;
	margin-left:33%;
	margin-right:auto;
}

#textinput_100{
	padding-left: 10px;
	 border-radius: 12px; 
	-moz-border-radius: 12px; 
	-webkit-border-radius: 12px; 	
	background-color: #bde9fd; 
	width: 100px;
}
#textinput_150{
	padding-left: 10px;
	 border-radius: 12px; 
	-moz-border-radius: 12px; 
	-webkit-border-radius: 12px;
	background-color: #bde9fd; 
	width: 150px;
}
#textinput_200{
	padding-left: 10px;
	 border-radius: 12px; 
	-moz-border-radius: 12px; 
	-webkit-border-radius: 12px;
	background-color: #bde9fd; 
	width: 200px;
}

label {
	font-weight: bold;
	padding: 1px;
	font-size: 16px;
}

